start fixing vertical game alignment

--- a/src/components/game/layout.css
+++ b/src/components/game/layout.css
@@ -14,7 +14,10 @@
   border-right: 1px solid gray;
 }
 
-.game-horizontal-container>.left-pane>.board-holder {
+.game-horizontal-container>
+  .left-pane>
+    .board-holder,
+.game-vertical-container>.board-holder {
   margin-left: auto;
   margin-right: auto;
   align-content: center;
@@ -73,4 +76,17 @@
     .lists-holder>
       div:last-child {
   margin-left: auto;
+}
+
+.game-vertical-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin: 1vh;
+}
+
+.game-vertical-container>.score-holder {
+  margin-top: auto;
+  margin-bottom: 1vh;
 }
